--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/fs-extra": "^7.0.0",
     "@types/node": "^12.0.4",
     "@types/socket.io": "^2.1.2",
-    "ts-node": "^8.2.0"
+    "ts-node": "^8.2.0",
+    "typescript": "^3.5.1"
   }
 }
